--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -90,3 +90,81 @@ url = {http://codeflow.org/entries/2011/nov/10/webgl-gpu-landscaping-and-erosion
   year={2000},
   organization={ACM}
 }
+
+@inproceedings{Watanabe:2004:SIT:1186415.1186500,
+ author = {Watanabe, Nayuko and Igarashi, Takeo},
+ title = {A sketching interface for terrain modeling},
+ booktitle = {ACM SIGGRAPH 2004 Posters},
+ series = {SIGGRAPH '04},
+ year = {2004},
+ isbn = {1-58113-896-2},
+ location = {Los Angeles, California},
+ pages = {73--},
+ url = {http://doi.acm.org/10.1145/1186415.1186500},
+ doi = {10.1145/1186415.1186500},
+ acmid = {1186500},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@inproceedings{Cockett:Online,
+author = {Cockett, Rowan},
+title = {Visible Geology},
+booktitle = {http://app.visiblegeology.com/},
+url = {http://app.visiblegeology.com/}
+}
+
+@article{jessell1981noddy,
+  title={Noddy: an interactive map creation package},
+  author={Jessell, MW},
+  journal={Unpublished MSc Thesis, University of London},
+  year={1981}
+}
+
+@inproceedings{Gain:2009:TS:1507149.1507155,
+ author = {Gain, James and Marais, Patrick and Stra\sser, Wolfgang},
+ title = {Terrain sketching},
+ booktitle = {Proceedings of the 2009 symposium on Interactive 3D graphics and games},
+ series = {I3D '09},
+ year = {2009},
+ isbn = {978-1-60558-429-4},
+ location = {Boston, Massachusetts},
+ pages = {31--38},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1507149.1507155},
+ doi = {10.1145/1507149.1507155},
+ acmid = {1507155},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{natalirapid,
+  title={Rapid Visualization of Geological Concepts},
+  author={Natali, M. and Viola, I. and Patel, D.}
+}
+
+@article{petrel,
+  title={Petrel seismic interpretation software. Schlumberger
+Information Solutions (SIS)},
+  author={Schlumberger}
+}
+
+@inproceedings{brazil2010sketching,
+  title={Sketching variational hermite-rbf implicits},
+  author={Brazil, E. and Macedo, I. and Sousa, M.C. and de Figueiredo, L.H. and Velho, L.},
+  booktitle={Proceedings of the Seventh Sketch-Based Interfaces and Modeling Symposium},
+  pages={1--8},
+  year={2010},
+  organization={Eurographics Association}
+}
+
+@inproceedings{amorim2012sketch,
+  title={Sketch modeling of seismic horizons from uncertainty},
+  author={Amorim, R. and Brazil, E.V. and Patel, D. and Sousa, M.C.},
+  booktitle={Proceedings of the International Symposium on Sketch-Based Interfaces and Modeling},
+  pages={1--10},
+  year={2012},
+  organization={Eurographics Association}
+}
+
+http://app.visiblegeology.com/
