--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -38,6 +38,13 @@ year = {2008},
   publisher={Morgan Kaufmann}
 }
 
+@book{fossen2008geologi,
+  title={Geologi, Stein, mineraler, fossiler og olje },
+  author={Fossen, H.},
+  year={2008},
+  publisher={Fagbokforlaget}
+}
+
 @inproceedings{shepard1968two,
   title={A two-dimensional interpolation function for irregularly-spaced data},
   author={Shepard, D.},
@@ -72,6 +79,16 @@ url = {http://codeflow.org/entries/2011/nov/10/webgl-gpu-landscaping-and-erosion
  address = {New York, NY, USA},
  keywords = {3D modeling, chordal axes, design, gestures, inflation, pen-based systems, sketching},
 } 
+
+@article{neal1993sequence,
+  title={Sequence Stratigraphy—A Global Theory for Local Success},
+  author={Neal, J. and Risch, D. and Vail, P.},
+  journal={Oilfield review},
+  number={2},
+  pages={51--62},
+  year={1993}
+}
+
 
 @inproceedings{zeleznik2007sketch,
   title={SKETCH: an interface for sketching 3D scenes},
@@ -122,7 +139,7 @@ url = {http://app.visiblegeology.com/}
 }
 
 @inproceedings{Gain:2009:TS:1507149.1507155,
- author = {Gain, James and Marais, Patrick and Stra\sser, Wolfgang},
+ author = {Gain, James and Marais, Patrick and Strasser, Wolfgang},
  title = {Terrain sketching},
  booktitle = {Proceedings of the 2009 symposium on Interactive 3D graphics and games},
  series = {I3D '09},
@@ -166,5 +183,34 @@ Information Solutions (SIS)},
   year={2012},
   organization={Eurographics Association}
 }
+
+@inproceedings{natali2013modeling,
+  title={Modeling Terrains and Subsurface Geology},
+  author={Natali, M. and Lidal E.M. and Viola, I. and Patel, D.},
+  booktitle={Eurographics 2012 (approved)},
+  year={2013},
+  organization={Eurographics Association}
+}
+
+@article{turner2007review,
+  title={A review of geological modeling},
+  author={Turner, A.K. and Gable, C.W.},
+  journal={Three-dimensional geologic mapping for groundwater applications. Minnesota Geological Survey Open-file Report},
+  pages={07--4},
+  year={2007}
+}
+@article{turner2006challenges,
+  title={Challenges and trends for geological modelling and visualisation},
+  author={Turner, A.K.},
+  journal={Bulletin of Engineering Geology and the Environment},
+  volume={65},
+  number={2},
+  pages={109--127},
+  year={2006},
+  publisher={Springer}
+}
+
+
+
 
 http://app.visiblegeology.com/
