--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -31,6 +31,71 @@ keywords = {I.3.5 [Computer Graphics], Computational Geometry and Object Modelin
 year = {2008},
 }
 
+@inproceedings{parish2001procedural,
+  title={Procedural modeling of cities},
+  author={Parish, Y.I.H. and M{\"u}ller, P.},
+  booktitle={Proceedings of the 28th annual conference on Computer graphics and interactive techniques},
+  pages={301--308},
+  year={2001},
+  organization={ACM}
+}
+
+@inproceedings{patel2010seismic,
+  title={Seismic volume visualization for horizon extraction},
+  author={Patel, D. and Bruckner, S. and Viola, I. and Groller, EM},
+  booktitle={Pacific Visualization Symposium (PacificVis), 2010 IEEE},
+  pages={73--80},
+  year={2010},
+  organization={IEEE}
+}
+
+
+@article{patel2008seismic,
+  title={The seismic analyzer: Interpreting and illustrating 2d seismic data},
+  author={Patel, D. and Giertsen, C. and Thurmond, J. and Gjelberg, J. and Grller, E.},
+  journal={Visualization and Computer Graphics, IEEE Transactions on},
+  volume={14},
+  number={6},
+  pages={1571--1578},
+  year={2008},
+  publisher={IEEE}
+}
+
+
+@article{mallet1997discrete,
+  title={Discrete modeling for natural objects},
+  author={Mallet, J.L.},
+  journal={Mathematical Geology},
+  volume={29},
+  number={2},
+  pages={199--219},
+  year={1997},
+  publisher={Springer}
+}
+
+
+@article{mallet1992discrete,
+  title={Discrete smooth interpolation in geometric modelling},
+  author={Mallet, J.L.},
+  journal={Computer-aided design},
+  volume={24},
+  number={4},
+  pages={178--191},
+  year={1992},
+  publisher={Elsevier}
+}
+
+
+@book{muller2006procedural,
+  title={Procedural modeling of buildings},
+  author={M{\"u}ller, P. and Wonka, P. and Haegler, S. and Ulmer, A. and Van Gool, L.},
+  volume={25},
+  number={3},
+  year={2006},
+  publisher={ACM}
+}
+
+
 @book{farin2001curves,
   title={Curves and surfaces for CAGD: a practical guide},
   author={Farin, G.},
@@ -44,6 +109,12 @@ year = {2008},
   year={2008},
   publisher={Fagbokforlaget}
 }
+
+@article{natalirapid,
+  title={Rapid Visualization of Geological Concepts},
+  author={Natali, M. and Viola, I. and Patel, D.}
+}
+
 
 @inproceedings{shepard1968two,
   title={A two-dimensional interpolation function for irregularly-spaced data},
@@ -131,12 +202,114 @@ booktitle = {http://app.visiblegeology.com/},
 url = {http://app.visiblegeology.com/}
 }
 
+@book{moller2008real,
+  title={Real-time rendering},
+  author={M{\"o}ller, T. and Haines, E. and Hoffman, N.},
+  year={2008},
+  publisher={AK Peters Limited}
+}
+
+
 @article{jessell1981noddy,
   title={Noddy: an interactive map creation package},
   author={Jessell, MW},
   journal={Unpublished MSc Thesis, University of London},
   year={1981}
 }
+
+@inproceedings{vst2008interactive,
+  title={Interactive terrain modeling using hydraulic erosion},
+  author={{\v{S}}t'ava, O. and Bene{\v{s}}, B. and Brisbin, M. and K{\v{r}}iv{\'a}nek, J.},
+  booktitle={Proceedings of the 2008 ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
+  pages={201--210},
+  year={2008},
+  organization={Eurographics Association}
+}
+
+
+@article{benevs2002visual,
+  title={Visual simulation of hydraulic erosion},
+  author={Bene{\v{s}}, B. and Forsbach, R.},
+  journal={Journal of WSCG},
+  volume={10},
+  number={1},
+  pages={79--86},
+  year={2002}
+}
+
+
+@inproceedings{benes2001layered,
+  title={Layered data representation for visual simulation of terrain erosion},
+  author={Benes, B. and Forsbach, R.},
+  booktitle={Computer Graphics, Spring Conference on, 2001.},
+  pages={80--86},
+  year={2001},
+  organization={IEEE}
+}
+
+
+@inproceedings{tasse2012enhanced,
+  title={Enhanced Texture-Based Terrain Synthesis on Graphics Hardware},
+  author={Tasse, FP and Gain, J. and Marais, P.},
+  booktitle={Computer Graphics Forum},
+  year={2012},
+  organization={Wiley Online Library}
+}
+
+@article{olsen2004realtime,
+  title={Realtime procedural terrain generation},
+  author={Olsen, J.},
+  journal={Department of Mathematics And Computer Science (IMADA)},
+  year={2004},
+  publisher={sn}
+}
+
+
+@inproceedings{hnaidi2010feature,
+  title={Feature based terrain generation using diffusion equation},
+  author={Hnaidi, H. and Gu{\'e}rin, E. and Akkouche, S. and Peytavie, A. and Galin, E.},
+  booktitle={Computer Graphics Forum},
+  volume={29},
+  number={7},
+  pages={2179--2186},
+  year={2010},
+  organization={Wiley Online Library}
+}
+
+
+@inproceedings{de2009interactive,
+  title={Interactive GPU-based procedural heightfield brushes},
+  author={de Carpentier, G.J.P. and Bidarra, R.},
+  booktitle={Proceedings of the 4th International Conference on Foundations of Digital Games},
+  pages={55--62},
+  year={2009},
+  organization={ACM}
+}
+
+
+@inproceedings{peytavie2009arches,
+  title={Arches: a framework for modeling complex terrains},
+  author={Peytavie, A. and Galin, E. and Grosjean, J. and Merillou, S.},
+  booktitle={Computer Graphics Forum},
+  volume={28},
+  number={2},
+  pages={457--467},
+  year={2009},
+  organization={Wiley Online Library}
+}
+
+
+@inproceedings{peytavie2009procedural,
+  title={Procedural generation of rock piles using aperiodic tiling},
+  author={Peytavie, A. and Galin, E. and Grosjean, J. and Merillou, S.},
+  booktitle={Computer Graphics Forum},
+  volume={28},
+  number={7},
+  pages={1801--1809},
+  year={2009},
+  organization={Wiley Online Library}
+}
+
 
 @inproceedings{Gain:2009:TS:1507149.1507155,
  author = {Gain, James and Marais, Patrick and Strasser, Wolfgang},
@@ -192,6 +365,18 @@ Information Solutions (SIS)},
   organization={Eurographics Association}
 }
 
+@article{caumon2009surface,
+  title={Surface-based 3D modeling of geological structures},
+  author={Caumon, G. and Collon-Drouaillet, P. and Le Carlier de Veslud, C. and Viseur, S. and Sausse, J.},
+  journal={Mathematical Geosciences},
+  volume={41},
+  number={8},
+  pages={927--945},
+  year={2009},
+  publisher={Springer}
+}
+
+
 @article{turner2007review,
   title={A review of geological modeling},
   author={Turner, A.K. and Gable, C.W.},
@@ -210,6 +395,27 @@ Information Solutions (SIS)},
   publisher={Springer}
 }
 
+@book{spencer2008zbrush,
+  title={ZBrush Character Creation: Advanced Digital Sculpting},
+  author={Spencer, S.},
+  year={2008},
+  publisher={Sybex}
+}
+
+
+@book{turner1992three,
+  title={Three-dimensional modeling with geoscientific information systems},
+  author={Turner, A.K.},
+  volume={354},
+  year={1992},
+  publisher={Springer}
+}
+
+@book{kelk1992experiments,
+  title={Experiments with a CAD system for spatial modelling of geoscientific data},
+  author={Kelk, B. and Challen, K.},
+  year={1992}
+}
 
 
 
